[gd_scene load_steps=4 format=3 uid="uid://cxwui2jlyfmyh"]

[ext_resource type="Script" uid="uid://6038l4a055lf" path="res://gui/player_stats/player_stats_panel.gd" id="1_ceqqy"]
[ext_resource type="Texture2D" uid="uid://cul1k6s1su0ex" path="res://gui/assets/panel_96px.png" id="1_mucwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5n7oi"]

[node name="PlayerStatsPanel" type="PanelContainer"]
offset_right = 254.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5n7oi")
script = ExtResource("1_ceqqy")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_mucwl")
region_rect = Rect2(0, 0, 96, 96)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MovementSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Movement Speed: xxx"

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage: xxx"

[node name="MiningSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mining Speed: xxx"

[node name="MaxHitsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Maximum Hits: xxx"

[node name="CritChanceLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Maximum Hits: xxx"

[node name="CritMultiLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Maximum Hits: xxx"
